<resources>
    <string name="app_name">SimpleTravel</string>
    <string name="title_Introduce">Hãy là một thành viên tích cực và góp phần nâng cao chất lượng của Simple Travel.
    Simple Travel xin chào thành viên mới nhé !.</string>
    <string name="title_email">Tiếp tục bằng Email</string>
    <string name="title_facebook">Tiếp tục bằng Facebook </string>
    <string name="title_google">Tiếp tục bằng Google</string>
    <string name="title_instagram">Tiếp tục bằng Instagram</string>
    <string name="title_information">Phát triển bởi nhóm TG63 - Phiên bản 1.0</string>

    <string name="title_discovery">Khám Phá</string>
    <string name="title_search">Tìm Kiếm</string>
    <string name="title_planning">Lập Kế Hoạch</string>
    <string name="title_evaluate">Đánh Giá</string>
    <string name="title_view_history">Đã xem gần đây</string>
    <string name="title_planning_vacation">Lập kế hoạch cho kỳ nghĩ tiếp theo</string>
    <string name="title_hotel_small">Khách sạn nhỏ</string>
    <string name="title_trip">Chuyến đi</string>
    <string name="title_saved">Mục đã lưu</string>
    <string name="title_oder">Đặt chỗ</string>
    <string name="title_create_trip">Tạo chuyến đi</string>
    <string name="title_hotel">Khách sạn</string>
    <string name="title_entertainment">Hoạt động giải tri</string>
    <string name="title_restaurant">Nhà hàng</string>
    <string name="title_visit">Điểm tham quan</string>
    <string name="title_bonus_discovery">Tiếp tục khám phá</string>
    <string name="title_add_discovery">Khám phá thêm tại</string>
    <string name="title_hotel_detail">Những điểm đến thú vị, các khách sạn nhỏ và sang trọng còn thú vị hơn</string>
    <string name="title_planning_detail">Những điểm đến lý tưởng, hấp dẫn cho bạn và gia đình cần khám phá</string>
    <string name="title_summary_login">Đăng nhập để khám phá những điều tuyệt vời nhất của SimpleTravel</string>

    <string name="title_addressmail">Địa chỉ email</string>
    <string name="title_password">Mật khẩu</string>
    <string name="title_confirmpassword">Xác nhận mật khẩu</string>
    <string name="title_forgot_password">Bạn quên mật khẩu ?</string>
    <string name="title_signin">Đăng Nhập</string>
    <string name="title_signup">Đăng Ký</string>
    <string name="title_back">Trở lại</string>
    <string name="title_back_summary">Chào mừng bạn quay trở lại</string>
    <string name="title_signup_summary">Trở thành thành viên của SimpleTravel</string>
    <string name="title_summary_notification">Có, hãy thông báo cho tôi giảm giá và tính năng mới. Bạn có thể hủy nhận thông tin bất
    kỳ lúc nào.</string>
    <string name="title_">Trở lại</string>

    <!--  Fragment Item Search-->
    <string name="title_destroy">Hủy</string>
    <string name="title_vicinity">Lân cận</string>
    <string name="title_recently">Gần Đây</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Activity Tai khoan-->
    <string name="title_account">Tài Khoản</string>
    <string name="title_logout">Đăng xuất</string>
    <string name="title_update">Cập nhật</string>
    <string name="title_savechange">Cập nhật thay đổi</string>
    <string name="title_Cancel">Thoát</string>

    <string name="title_Name_Trip">Tên chuyến đi</string>
    <string name="title_List_Trip">Chọn chuyến đi để lưu vào: </string>
    <string name="title_Perfect">Hoàn Tất</string>

    <!--    activity evaluate-->
    <string name="title_Rating">Bạn xếp hạng trải nghiệm của mình bao nhiêu ngôi sao ?</string>
    <string name="title_Rating_VeryGood">Xuất sắc</string>
    <string name="title_Rating_Good">Rất tốt</string>
    <string name="title_Medium">Trung bình</string>
    <string name="title_Bad">Khá Tệ</string>
    <string name="title_VeryBad">Tồi Tệ</string>

    <string name="title_Type">Đây là chuyến đi thuộc loại hình gì ?</string>
    <string name="title_Bussiness">Công tác</string>
    <string name="title_Couple">Cập đôi</string>
    <string name="title_Friend">Bạn Bè</string>
    <string name="title_Alone">Một mình</string>
    <string name="title_FamilySmall">Gia đình nhỏ</string>
    <string name="title_FamilyBig">Đại gia đình</string>

    <string name="title_TimeTrip">Bạn đã ghé thăm vào lúc nào ?</string>
    <string name="title_writeEvaluate">Viết đánh giá</string>
    <string name="title_TitleEvaluate">Đặt tiêu đề cho đánh giá này</string>
    <string name="title_TitleImages">Chia sẻ một vài bức ảnh bạn chụp trong chuyến đi</string>

    <string name="title_Send">Gửi</string>

    <!--    discovery location detail-->
    <string name="title_Play">Những địa điểm tham quan, hoạt động khám phá và trải nghiệm tiêu biểu của khu vực.</string>
    <string name="title_Stay">Sự giao hòa giữa nét quyến rũ, tính biểu tượng và vẻ đẹp hiện đại.</string>
    <string name="title_Food">Nhà hàng, quán ăn xuất sắc tại đây sẽ cho bạn cảm nhận chân thật về văn hóa ẩm thực.</string>
    <string name="title_TPlay">Vui chơi</string>
    <string name="title_TStay">Lưu trú</string>
    <string name="title_TFood">Dùng bữa</string>
    <!--    search item rating-->
    <string name="title_Ratings">Bạn muốn đánh giá địa điểm nào ?</string>

    <string name="title_RatingAdd">Thêm nhận xét</string>
    <string name="title_Confirm">Bạn chắc chắn muốn xóa ?</string>
    <string name="title_Edit_Trip">Mời bạn thay đổi tên chuyến đi</string>
    <string name="title_Yes">Đồng ý</string>
    <string name="title_No">Từ chối</string>
    <string name="title_Category">Danh mục chuyến đi</string>

    <string name="search_map_km_unit">km</string>
    <string name="search_map_1.5km">1.5</string>
    <string name="search_map_3km">3</string>
    <string name="search_map_5km">5</string>
    <string name="search_map_10km">10</string>
    <string name="search_map_30km">30</string>
    <string name="search_map_allkm">ALL</string>
    <string name="title_activity_google">GoogleActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_google_map">GoogleMapActivity</string>


</resources>