<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.planning.PlanningFragment">

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_Planning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_planning"
            android:textSize="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            >

            <TextView
                android:id="@+id/txt_Trip_Planning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_trip"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/txt_Saved_Planning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_saved"
                android:textSize="20dp"
                android:layout_marginLeft="30dp"/>

            <TextView
                android:id="@+id/txt_Oder_Planning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_oder"
                android:textSize="20dp"
                android:layout_marginLeft="30dp"/>

        </LinearLayout>


        <fragment
            android:id="@+id/nav_host_fragment_activity_main"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            />
<!--            app:navGraph="" />-->


        <Button
            android:id="@+id/btn_CreateTrip_Planning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_create_trip"
            android:backgroundTint="@color/black"
            android:textFontWeight="@integer/material_motion_duration_long_1"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</LinearLayout>