<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".activity.EmailActivity">

    <TextView
        android:id="@+id/txt_back_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/title_back"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/txt_Title_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/title_back_summary"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/txt_Title_Address_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_addressmail"
                />

            <EditText
                android:id="@+id/txt_AddressEmail_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_shape_frames"
                android:hint="@string/title_addressmail"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txt_AddressEmailAlert_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/title_addressmail"
                android:layout_marginTop="5dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/txt_Title_Password_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_password" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/txt_Password_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/ic_shape_frames"
                    android:gravity="center"
                    android:hint="@string/title_password"
                    android:inputType="textPassword"
                    android:paddingVertical="15dp"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txt_ShowPassWord_Email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_visit_main"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="20dp"/>

            </FrameLayout>

            <TextView
                android:id="@+id/txt_PasswordAlert_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/title_password"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/title_forgot_password"
            android:textSize="20dp"
            android:textColor="@color/teal_700"/>

        <Button
            android:id="@+id/btn_SignIn_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/title_signin"
            android:padding="20dp"
            app:strokeColor="@color/teal_200"
            app:strokeWidth="2dp"
            app:cornerRadius="10dp"
            app:rippleColor="#33F8F5F5"/>

        <Button
            android:id="@+id/btn_SignUp_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/title_signup"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            app:strokeColor="@color/teal_200"
            app:strokeWidth="2dp"
            app:cornerRadius="10dp"
            app:rippleColor="#33F8F5F5"/>


    </LinearLayout>

</LinearLayout>