<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/logo"
        android:layout_gravity="left"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_summary_login"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_Introduce"
        />


    <LinearLayout
        android:id="@+id/btn_Email_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal"
        android:background="@drawable/ic_shape_frames_layout"
        android:layout_marginTop="40dp"
        >
        <TextView
            android:layout_width="26dp"
            android:layout_height="28dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:layout_gravity="center|left"
            android:layout_marginLeft="20dp"
            android:visibility="visible"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textSize="20dp"
            android:text="@string/title_email"
            android:textColor="@color/black"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_Google_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:background="@drawable/ic_shape_frames_layout"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="26dp"
            android:layout_height="28dp"
            android:background="@drawable/google"
            android:layout_gravity="center|left"
            android:layout_marginLeft="20dp"
            android:visibility="visible"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/title_google"
            android:textColor="@color/black"
            />

    </LinearLayout>

</LinearLayout>