<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".activity.LoginEmailActivity">

    <TextView
        android:id="@+id/txt_back_SignUp_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/title_back"
        android:textSize="20dp"
        android:textColor="@color/teal_700"/>

    <TextView
        android:id="@+id/txt_Title_SignUp_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/title_signup_summary"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_addressmail" />

            <EditText
                android:id="@+id/txt_AddressEmail_SignUp_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_shape_frames"
                android:paddingVertical="15dp"
                android:hint="Địa chỉ email"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:maxLines="1"
                android:imeOptions="actionNext"/>

            <TextView
                android:id="@+id/txt_AddressEmailAlert_SignUp_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_addressmail" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_password" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/txt_Password_SignUp_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/ic_shape_frames"
                    android:gravity="center"
                    android:hint="@string/title_password"
                    android:inputType="textPassword"
                    android:paddingVertical="15dp"
                    android:textSize="20dp"
                    android:maxLines="1"
                    android:imeOptions="actionNext"/>

                <TextView
                    android:id="@+id/txt_ShowPassWord_SignUp_Email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_visit_main"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="20dp"/>

            </FrameLayout>

            <TextView
                android:id="@+id/txt_PasswordAlert_SignUp_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/rdb_Notificaton_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_summary_notification"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btn_Signup_SignUp_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:padding="20dp"
            android:text="@string/title_signup"
            app:cornerRadius="10dp"
            app:rippleColor="#33F8F5F5"
            app:strokeColor="@color/teal_200"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btn_SignIn_SignUp_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/title_signin"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            app:strokeColor="@color/teal_200"
            app:strokeWidth="2dp"
            app:cornerRadius="10dp"
            app:rippleColor="#33F8F5F5"/>


    </LinearLayout>

</LinearLayout>