<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20dp"
    android:background="@drawable/backround_dialog">

    <View
        android:layout_width="25dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@color/INK_grey"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_List_Trip"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ListView
                android:id="@+id/dialoglistrip_lv_Trip"
                android:layout_width="match_parent"
                android:layout_height="120dp"/>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/dialog_list_txt_Create_Trip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_create_trip"
            android:textSize="20dp"
            android:textColor="@color/INK_RED"
            android:drawableLeft="@drawable/ic_baseline_add_24"/>

        <Button
            android:id="@+id/dialog_list_btn_Completed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_Perfect"
            android:backgroundTint="@color/black"/>

    </LinearLayout>

</LinearLayout>